Fix `pre` block light mode styling, make codeblocks always dark mode

--- a/sass/parts/_code.scss
+++ b/sass/parts/_code.scss
@@ -106,11 +106,6 @@ pre {
   }
 }
 
-.light pre {
-  background-color: #F3F3F3 !important;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
 pre::-webkit-scrollbar {
   height: 8px;
 }
